--- a/styles/_mainmedias.scss
+++ b/styles/_mainmedias.scss
@@ -37,7 +37,7 @@
       }
     }
     .section-episodios {
-      padding: 0 0 232.6px 0;
+      padding: 0 0 168.6px 0;
       height: 1042.6px;
       .episodios-background {
         transform: skewY(-4deg);
@@ -54,20 +54,20 @@
         grid-template-rows: 50% 50%;
         .iframe-spotify {
           iframe {
-            margin: 11px;
+            margin: 0;
           }
         }
         div:nth-child(1) {
-          padding: 0 72px 72px 100px;
+          padding: 0 36px 72px 100px;
         }
         div:nth-child(3) {
-          padding: 0 72px 0 100px;
+          padding: 0 36px 0 100px;
         }
         div:nth-child(2) {
-          padding: 0 100px 72px 0;
+          padding: 0 100px 72px 36px;
         }
         div:nth-child(4) {
-          padding: 0 100px 0 0;
+          padding: 0 100px 0 36px;
         }
       }
     }
